# mnemos-embedkit

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
benches/: results.md
benches/scripts/: cix_inprocess_bench.py  cix_npu_bench.py
docs/: CIX-SKY1-NPU-STANDALONE-SETUP.md  CODEX-ADAPTER-HANDOFF.md  DESIGN.md
src/embedkit/: __init__.py  engine.py  pick.py
src/embedkit/adapters/: __init__.py  base.py  cpu_llamacpp.py  gpu_apple_mlx.py  gpu_nvidia_cuda.py  npu_cix_zhouyi.py
src/embedkit/models/: __init__.py  registry.py
tests/: test_cpu_llamacpp.py  test_gpu_apple_mlx.py  test_gpu_nvidia_cuda.py  test_npu_cix_zhouyi.py
